--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <title>YouTops</title>
 </head>
@@ -13,9 +17,6 @@
         </a>
     </header>
     <main>
-        <section class="intro">
-            <p>En YouTops vas a encontrar el top 8 de los videos mas vistos de Youtube</p>
-        </section>
         <section class="cards">
             <article class="card">
                 <h2>#1</h2>
